--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,10 @@ input{
     background-color: white;
     height: 50px;
     top: 290px;
+    font-size: 25px;
+    margin-left: 15px;
+    border: none;
+    padding: 10px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
