adding the search-bar

--- a/style/style.css
+++ b/style/style.css
@@ -27,3 +27,14 @@ body{
     font-size: 23px;
     font-family: sans-serif;
 }
+
+input{
+    width: 300px;
+    background-color: white;
+    height: 50px;
+    top: 290px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 30px;
+}
